# embed-ghc-stack-overflow

./: README.md  embed-ghc-stack-overflow.cabal
src/: MyLib.hs
