cabal-version:      3.0
name:               embed-ghc-stack-overflow
version:            0.1.0.0
synopsis:           Reproduce a stack overflow in GHC
homepage:           https://github.com/typechecker/embed-ghc-stack-overflow
license:            MPL-2.0
license-file:       LICENSE
author:             Phil de Joux
maintainer:         phil.dejoux@blockscope.com
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:    base, bytestring, file-embed, template-haskell
    exposed-modules:  MyLib
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O0 +RTS -K16M -RTS
